model Notification {
  id        Int     @id @default(autoincrement())
  studentId Int
  resultId  Int?
  type      String  @db.VarChar(50) // 'result_available' | 'system'
  message   String  @db.Text
  isRead    Boolean @default(false)

  // Audit
  createdAt DateTime @default(now())
  updatedAt DateTime @updatedAt

  // Relations
  student User    @relation(fields: [studentId], references: [id])
  result  Result? @relation(fields: [resultId], references: [id])
}
