model Question {
  id               Int      @id @default(autoincrement())
  teacherId        Int?
  schoolId         Int? // Owning school's question bank; NULL for fallback-bank questions
  statement       String   @db.Text
  contentType      String   @db.VarChar(50) // 'text' | 'image' | 'audio' | 'interactive'
  vakStyle         String   @db.VarChar(20) // 'Visual' | 'Auditory' | 'Kinesthetic'
  mediaUrl         String?  @db.VarChar(500)
  origin           String   @db.VarChar(50) // 'ai_generated' | 'fallback_bank'
  validationStatus String   @db.VarChar(50) // 'pending' | 'approved' | 'rejected'
  rejectionReason  String?  @db.Text
  generationDate   DateTime

  // Audit
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  // Relations
  teacher User?   @relation("TeacherQuestions", fields: [teacherId], references: [id])
  school  School? @relation(fields: [schoolId], references: [id], onDelete: SetNull)

  // Inverse relations
  embedding      QuestionEmbedding?
  options        Option[]
  answers        Answer[]
  questionnaires QuestionnaireQuestion[]

  @@index([schoolId, validationStatus, origin, vakStyle])
}
