model Result {
  id              Int  @id @default(autoincrement())
  questionnaireId Int  @unique
  studentId       Int
  mlModelId       Int?

  // ML output — mirrors Lambda response object exactly
  predominantStyle       String?  @db.VarChar(20) // 'Visual' | 'Auditory' | 'Kinesthetic'
  secondaryStyle         String?  @db.VarChar(20) // Second highest style — mixed profile feedback
  visualProbability      Float?                   // Confidence 0-100
  auditoryProbability    Float?                   // Confidence 0-100
  kinestheticProbability Float?                   // Confidence 0-100
  predominantConfidence  Float?                   // Max probability — redundant but useful for frontend
  profileType            String?  @db.VarChar(20) // 'clear' | 'tendency' | 'mixed'
  isMixedProfile         Boolean  @default(false)
  classifierType         String?  @db.VarChar(50) // 'xgboost' | 'simple_score'
  modelVersion           String?  @db.VarChar(20)

  // Generative AI feedback
  aiFeedback     String? @db.Text
  feedbackSource String? @db.VarChar(50) // 'gemini' | 'predefined'

  // Pilot phase label correction
  correctedVakLabel   String? @db.VarChar(20)
  correctingTeacherId Int?

  resultDate DateTime?

  // Audit
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime?

  // Relations
  questionnaire     Questionnaire @relation(fields: [questionnaireId], references: [id])
  student           User          @relation("StudentResults", fields: [studentId], references: [id])
  mlModel           MLModel?      @relation(fields: [mlModelId], references: [id])
  correctingTeacher User?         @relation("CorrectingTeacherResults", fields: [correctingTeacherId], references: [id])

  // Inverse relations
  notifications Notification[]
}