model User {
  id          Int      @id @default(autoincrement())
  password    String   @db.VarChar(100)
  email       String   @unique @db.VarChar(100)
  name        String   @db.VarChar(250)
  birthDate   DateTime @db.Date
  phoneNumber String?  @db.VarChar(20)
  isActive    Boolean  @default(false)

  // Audit
  createdAt DateTime  @default(now())
  updatedAt DateTime  @updatedAt
  deletedAt DateTime? @db.Timestamp(0)

  // Relations
  roleId          Int?
  academicGradeId Int?
  schoolId        Int?

  role          Roles?         @relation(fields: [roleId], references: [id])
  academicGrade AcademicGrade? @relation(fields: [academicGradeId], references: [id])
  school        School?        @relation(fields: [schoolId], references: [id])

  // Inverse relations
  questionnaires    Questionnaire[] @relation("StudentQuestionnaires")
  questions         Question[]      @relation("TeacherQuestions")
  results           Result[]        @relation("StudentResults")
  correctingResults Result[]        @relation("CorrectingTeacherResults")
  mlDatasets        MLDataset[]     @relation("StudentMLDatasets")
  notifications     Notification[]
}
