// Entity-Relationship Model - VAK Project
// Generated from Prisma schema (prisma/schema/*.prisma)
// Tool: dbdiagram.io

Table Roles {
  id integer [primary key]
  description varchar(250) [not null]
  status boolean [not null, default: false]
  created_at timestamp [not null]
}

Table User {
  id integer [primary key]
  password varchar(100) [not null]
  email varchar(100) [unique, not null]
  name varchar(250) [not null]
  birth_date date [not null, note: 'Backend calculates exact age in real-time for ML']
  phone_number varchar(20)
  is_active boolean [not null, default: false]

  // Relations (FK)
  role_id integer
  academic_grade_id integer
  school_id integer

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [note: 'Soft delete']
}

Table School {
  id integer [primary key]
  institution_key varchar(150) [unique, not null, note: 'Grouping key: LOC-<CODLOCAL>-<NAME> or MOD-<COD_MOD>']
  cen_edu varchar(250) [not null, note: 'CEN_EDU - name']
  district varchar(150) [not null, note: 'D_DIST']
  address varchar(500) [not null, note: 'DIR_CEN']
  business_name varchar(250) [not null, note: 'RZSOCIAL']
  levels text[] [note: 'D_NIV_MOD values offered (Primaria/Secundaria/...)']
  cod_mods text[] [note: 'COD_MOD of every merged MINEDU service']

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table AcademicGrade {
  id integer [primary key]
  name varchar(100) [not null, note: "'1st Grade' ... '5th Secondary'"]
  level varchar(50) [not null, note: "'Primary' | 'Secondary'"]
  order integer [not null, note: 'Ordering in reports']

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [note: 'Soft delete']
}

Table Questionnaire {
  id integer [primary key]
  student_id integer [not null]
  status varchar(50) [not null, note: "'in_progress' | 'completed' | 'abandoned'"]
  completion_percentage float [note: 'Quality filter: exclude < 80% before ML training']
  used_fallback boolean [not null, default: false, note: 'true when Gemini API fallback used']
  start_time timestamp [not null]
  end_time timestamp

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table QuestionnaireQuestion {
  id integer [primary key]
  questionnaire_id integer [not null, note: 'FK to Questionnaire']
  question_id integer [not null, note: 'FK to Question']
  order integer [not null, note: 'Position in questionnaire (1-10)']

  // Audit
  created_at timestamp [not null]
}

Table Question {
  id integer [primary key]
  teacher_id integer [note: 'Pedagogical validator']
  school_id integer [note: 'Owning school question bank; NULL for fallback_bank']
  statement text [not null]
  content_type varchar(50) [not null, note: "'text' | 'image' | 'audio' | 'interactive'"]
  vak_style varchar(20) [not null, note: "'Visual' | 'Auditory' | 'Kinesthetic'"]
  media_url varchar(500)
  origin varchar(50) [not null, note: "'ai_generated' | 'fallback_bank'"]
  validation_status varchar(50) [not null, note: "'pending' | 'approved' | 'rejected'"]
  rejection_reason text
  generation_date timestamp [not null]

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table Option {
  id integer [primary key]
  question_id integer [not null]
  text text [not null]
  vak_value varchar(1) [not null, note: "'V' | 'A' | 'K'"]

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

// Central interaction table — raw behavioral data captured per question
Table Answer {
  id integer [primary key]
  questionnaire_id integer [not null]
  question_id integer [not null]
  selected_option_id integer [note: 'null if abandoned']
  navigation_sequence integer [note: 'Order in which question was answered (1-10)']
  question_time_seconds float [note: 'Seconds spent on this question. Aggregated into avg_question_time in MLDataset']
  number_of_changes integer [note: 'Option switches on this question. Aggregated into total_changes in MLDataset']
  times_reviewed integer [note: 'Times student returned to this question via Back button. Aggregated into total_reviews in MLDataset']

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table Result {
  id integer [primary key]
  questionnaire_id integer [unique, not null]
  student_id integer [not null]
  ml_model_id integer

  // ML output — mirrors Lambda response object exactly
  predominant_style varchar(20) [note: "'Visual' | 'Auditory' | 'Kinesthetic'"]
  secondary_style varchar(20) [note: 'Second highest style — used in mixed profile feedback']
  visual_probability float [note: 'Confidence 0-100']
  auditory_probability float [note: 'Confidence 0-100']
  kinesthetic_probability float [note: 'Confidence 0-100']
  predominant_confidence float [note: 'Max probability — mirrors confianza_predominante from Lambda']
  profile_type varchar(20) [note: "'clear' | 'tendency' | 'mixed'"]
  is_mixed_profile boolean [not null, default: false]
  classifier_type varchar(50) [note: "'xgboost' | 'simple_score'"]
  model_version varchar(20) [note: 'Traceability (e.g., v1.0)']

  // Generative AI feedback
  ai_feedback text [note: 'Qualitative feedback generated by Gemini API']
  feedback_source varchar(50) [note: "'gemini' | 'predefined'"]

  // Pilot phase label correction
  corrected_vak_label varchar(20) [note: 'Manual correction by teacher for retraining']
  correcting_teacher_id integer [note: 'Pilot phase audit']

  result_date timestamp

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp
}

Table MLModel {
  id integer [primary key]
  version varchar(20) [not null]
  file_url varchar(500) [not null, note: 'AWS S3 URL of serialized .pkl']
  algorithm varchar(50) [not null]

  // Evaluation metrics
  accuracy float
  f1_visual float
  f1_auditory float
  f1_kinesthetic float
  training_samples integer
  test_samples integer

  // Status
  is_active boolean [not null, default: false, note: 'Only one active model at a time']
  training_date timestamp
  notes text

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// ML training dataset — one record per completed questionnaire
// Features vector sent to Lambda:
//   visual_score, auditory_score, kinesthetic_score,
//   response_consistency, avg_question_time,
//   total_changes, total_reviews
Table MLDataset {
  id integer [primary key]
  questionnaire_id integer [unique, not null]
  student_id integer [not null]

  // ─── Core VAK features (ML Input) ────────────────────────
  visual_score integer [note: 'ML Input: sum of Visual options selected (0-10)']
  auditory_score integer [note: 'ML Input: sum of Auditory options selected (0-10)']
  kinesthetic_score integer [note: 'ML Input: sum of Kinesthetic options selected (0-10)']

  // ─── Behavioral features (ML Input) ──────────────────────
  response_consistency float [note: 'ML Input: Kappa-adjusted consistency (0-1). Calculated by backend from Answer.selected_option_id + Option.vak_value']
  avg_question_time float [note: 'ML Input: AVG(Answer.question_time_seconds) in seconds']
  total_changes integer [note: 'ML Input: SUM(Answer.number_of_changes) across all questions']
  total_reviews integer [note: 'ML Input: SUM(Answer.times_reviewed) across all questions — Back button presses']

  // ─── Quality filter (NOT a feature — used before training) 
  completion_percentage float [note: 'Filter only: records < 80% excluded before training. Sourced from Questionnaire.completion_percentage']

  // ─── Ground truth label ──────────────────────────────────
  vak_label varchar(20) [note: "'Visual' | 'Auditory' | 'Kinesthetic'"]
  label_source varchar(50) [note: "'simple_score' | 'teacher_validated'"]
  included_in_training boolean [not null, default: false]

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table QuestionEmbedding {
  id integer [primary key]
  question_id integer [unique, not null]
  embedding_vector text [not null, note: 'JSON vector from Gemini Embeddings']
  model_version varchar(50) [not null]

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

Table Notification {
  id integer [primary key]
  student_id integer [not null]
  result_id integer
  type varchar(50) [not null, note: "'result_available' | 'system'"]
  message text [not null]
  is_read boolean [not null, default: false]

  // Audit
  created_at timestamp [not null]
  updated_at timestamp [not null]
}

// ─── RELATIONSHIPS ────────────────────────────────────────────

// 1:N
Ref: User.role_id > Roles.id
Ref: User.academic_grade_id > AcademicGrade.id
Ref: User.school_id > School.id
Ref: Question.school_id > School.id
Ref: Questionnaire.student_id > User.id
Ref: Question.teacher_id > User.id
Ref: Option.question_id > Question.id
Ref: Answer.questionnaire_id > Questionnaire.id
Ref: Answer.question_id > Question.id
Ref: Answer.selected_option_id > Option.id
Ref: Result.student_id > User.id
Ref: Result.ml_model_id > MLModel.id
Ref: Result.correcting_teacher_id > User.id
Ref: Notification.student_id > User.id
Ref: Notification.result_id > Result.id
Ref: MLDataset.student_id > User.id

// N:N
Ref: QuestionnaireQuestion.questionnaire_id > Questionnaire.id
Ref: QuestionnaireQuestion.question_id > Question.id

// 1:1
Ref: Result.questionnaire_id - Questionnaire.id
Ref: MLDataset.questionnaire_id - Questionnaire.id
Ref: QuestionEmbedding.question_id - Question.id